# CINERENTAL

./: .dockerignore  .env.example  .env.prod-example  .env.production  .env.test  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  ACT-start.applescript  Dockerfile  Dockerfile.prod  Dockerfile.test  MIGRATION_STATUS.md  Makefile  README-DEPLOYMENT.md  README.md  README_mac_app.md  alembic.ini  docker-compose.caches.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.restore.yml  docker-compose.test.yml  docker-compose.yml  mypy.ini  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-prod.txt  requirements-test.txt  requirements.txt  run_new_frontend.sh  setup.cfg  setup.py  start_cinerental.applescript  start_production.sh  task_003_final_research.json  (+2 more)
.github/: dependabot.yml
.github/workflows/: auto-close-issues.yml  build.yml  code-quality.yml  deploy-frontend.yml  run-tests.yml  tests.yml  type-check.yml
.idx/: mcp.json
ACT-Rental-Launcher/: BACKUP_RESTORE_FIX.md  README.md  build_app.sh  requirements.txt  run_dev.sh  setup.py
ACT-Rental-Launcher/assets/: README.md
ACT-Rental-Launcher/src/: docker_manager.py  main.py
CINERENTAL-Launcher/: README.md  build_app.sh  requirements.txt  run_dev.sh  setup.py
CINERENTAL-Launcher/assets/: README.md
CINERENTAL-Launcher/src/: docker_manager.py  main.py
backend/: __init__.py  exceptions.py  main.py
backend/api/: dependencies.py
backend/constants/: __init__.py  log_messages.py
backend/core/: cache.py  config.py  database.py  logging.py  scheduler.py  templates.py  timezone_utils.py
backend/exceptions/: __init__.py  exceptions_base.py  messages.py  process_exceptions.py  resource_exceptions.py  state_exceptions.py  validation_exceptions.py
backend/models/: __init__.py  barcode_sequence.py  base.py  booking.py  category.py  client.py  document.py  equipment.py  global_barcode.py  project.py  scan_session.py  subcategory_prefix.py  user.py
backend/repositories/: __init__.py  barcode_sequence.py  base.py  booking.py  category.py  client.py  document.py  equipment.py  global_barcode.py  project.py  scan_session.py  subcategory_prefix.py
backend/schemas/: __init__.py  booking.py  category.py  client.py  document.py  equipment.py  project.py  scan_session.py  subcategory_prefix.py
backend/scripts/: extract_extended_data.py  extract_from_sql_dump.sh  seed_data.py
backend/services/: __init__.py  barcode.py  booking.py  category.py  client.py  document.py  equipment.py  project.py  scan_session.py  subcategory_prefix.py
backend/sql/: queries.sql
backend/web/: router.py
docker/: README.md  build-test-image.sh  copy-assets.sh  init-devpi-cache.sh  init-devpi.sh  init-test-db.sh  pip.conf  run-tests.sh  setup_production.sh  start.sh  use-local-devpi.sh  wait-for-devpi.sh  wait-for-it.sh  wait-for-postgres.sh  wait-for.sh
docker/apt-cacher-ng/: Dockerfile
docker/caches/: README.md
docker/devpi/: Dockerfile  entrypoint.sh
docs/: CHANGELOG.md  api_endpoints.md  architecture.md  business_logic.md  code_style.md  database_indexes.md  database_schema.md  database_schema.puml  db_renaming.md  deployment.md  development.md  development_plan.md  examples.md  index.md  logging-guide.md  logging-optimization-summary.md  migrations.md  project_structure.md  repositories.md  services.md  sql-dump-workflow.md  sql_queries.md  style-guide.md  test_coverage.md  testing.md  техническое_задание.md
docs/Current_task/: TZ.md
docs/architecture/: hierarchical-data-loading.md
docs/features/: live_search.md  pagination-macros.md
docs/frontend-scanner-develop/: LEGACY_ANALYSIS.md  MIGRATION_PLAN.md  README.md
docs/releases/: v0.5.0-alpha.3.md  v0.5.0-alpha.4.md
docs/specs/: SPEC-url-state-persistence.md
docs/typing/: decorators.md
docs/user_guides/: equipment_search.md
frontend/: openapi_backend.json
frontend-react/: .dockerignore  DOCKER.md  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts  vitest.config.ts
frontend-react/src/: App.tsx  index.css
frontend-vue3/: .eslintrc.cjs  .prettierrc  Dockerfile  README.md  TASK_1.2_COMPLETION_SUMMARY.md  VIRTUAL_SCROLLING_IMPLEMENTATION.md  bundlesize.config.json  nginx.conf  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts  vitest.setup.ts
frontend-vue3/DOCS/: COMPONENT_ANALYSIS_TASKS.md  DEVELOPMENT_PLAN.md  FRONTEND_ANALYSIS_AND_MIGRATION_PLAN.md  IMPLEMENTATION_PLAN.md  README.md  SUBAGENT_TASKS.md  TASK_2_1_COMPLETION_SUMMARY.md  TASK_PROGRESS.md  legacy_SUBAGENT_TASKS.md
frontend-vue3/e2e/: booking.spec.ts  projects.spec.ts  universal-cart-dual-mode.spec.ts
frontend-vue3/playwright-report/: index.html
frontend-vue3/src/: main.ts  test-performance.js
frontend-vue3/test-results/: .last-run.json
frontend/templates/: base.html  index.html  macros.jinja2  scanner.html
frontend_description/: BATCH-1-REWORK-PROMPT.md  BATCH-1-START-PROMPT.md  BATCH-EXECUTION-GUIDE.md  COMPONENT-COMPLETION-DELEGATION.md  TASK-EXECUTION-INSTRUCTIONS.md  execution_prompt.md  masterplan.md
frontend_description/inventory/: api-inventory.json  components-inventory.json  pages-inventory.json
frontend_description/methodology/: audit-validation-framework.md  correct-audit-assessment.md
frontend_description/progress/: level-4-component-analysis.md  stage-1-report.md  stage-2-report.md  stage-3-report.md  stage-4-report.md  stage-5-report.md  stage-6-coordination-plan.md  stage-6-current-progress.md  stage-6-report.md  stage-7-report.md  stage-8-final-validation-report.md  status.json  task-execution-tracker.json
migrations/: env.py
migrations/versions/: 20240319_1500_add_scan_sessions.py  20250124_2045_3facc5612e70_create_initial_tables.py  (+12 more)
nginx/: nginx.conf
postman/: CineRental.postman_collection.json  CineRental.postman_environment.json
scripts/: BACKUP_README.md  README.md  create_backup.sh
tests/: conftest.py
(+611 files in other folders)
