[tool.poetry]
name = "act-rental"
version = "v0.16.0-beta.2"
description = "Equipment rental management system"
authors = ["Alexey Anashkin <dev.anashkin@gmail.com>"]
license = "MIT"
packages = [{include = "backend"}]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = "^0.115.6"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
websockets = "^12.0"
sqlalchemy = "2.0.25"
alembic = "^1.13.1"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
redis = {extras = ["hiredis"], version = "^5.0.1"}
asyncpg = "^0.29.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.18"
jinja2 = "^3.1.2"
aiofiles = "^23.2.1"
loguru = "^0.7.2"
apscheduler = "^3.11.0"
python-barcode = {extras = ["images"], version = "^0.15.1"}
segno = "^1.6.1"
treepoem = "^3.8.0"
fastapi-pagination = "^0.12.34"

[tool.poetry.group.dev.dependencies]
black = "^24.1.0"
isort = "^6.0.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
psycopg2-binary = "^2.9.9"
types-redis = "^4.6.0.20240106"
types-passlib = "^1.7.7.20240106"
types-python-jose = "^3.3.4.20240106"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.5"
httpx = "^0.25.1"
faker = "^22.6.0"
factory-boy = "^3.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = ["backend/models/__init__.py"]
known_first_party = ["backend", "tests"]
known_third_party = ["alembic", "fastapi", "loguru", "playwright", "pytest", "pytest_asyncio", "sqlalchemy", "uvicorn"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true

exclude = [
    "ACT-Rental-Launcher/src/build/",
    "ACT-Rental-Launcher/src/dist/"
]

[[tool.mypy.overrides]]
module = "pydantic.*"
follow_imports = "skip"
follow_imports_for_stubs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "alembic.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fastapi.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sqlalchemy.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
    "ignore::PendingDeprecationWarning:starlette.formparsers",
]
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
]
